# dependency-drift

./: .gitignore  Cargo.toml  README.md  action.yml
.github/workflows/: ci.yml  release.yml
src/: catalog.rs  dep-drift.html  dep-drift.md  git.rs  lib.rs  main.rs
tests/: integration.rs
