[package]
name = "dependency-drift"
version = "0.1.0"
edition = "2024"

[lib]
name = "dependency_drift"
path = "src/lib.rs"

[[bin]]
name = "dependency-drift"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
git2 = "0.20"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
